ft2Util v1r1p6
Tweaks to PYTHONPATH and LD_LIBRARY_PATH
Tweaks to FT2 and fastMon
-------------------------------------------

1.18
-----------------
GlastRelease v12r5
Common v2r1p0
FastMon v2r1p1
ScienceTools v9r2

Stage chunks & crumbs on AFS.

Add "DATASOURCE=LPA" as pipeline variable and use it as metadata when
registering files.  User can override it when injecting MC data.
FastCopy to LISOC even in prod mode.
Frob makeFT1.
-------------------------------------------

1.19
-----------------
GlastRelease v12r8
Common v2r2p1
FastMon v2r2p0
ft2Util v1r1p11

Don't copy staged outputs back if processing failed.
Munge dependencies for FT1 and FT2.
Make bogus FT2 file for recon.
Make 30-second FT2 file.
Restrict svacTuple to fast hosts.
Register data products with DATASOURCE=(LPA|LCI|MC).
Use flight geometry for MC and ground for LPA.
Tweak queues.
-------------------------------------------

1.20
-----------------
GR v12r11
Common v2r3p1
FastMon v2r3p2
Monitor mk20071001
ft2Util v1r1p19

Make tStart and tStop prerequisites for doRun, and use them when registering
files and making FT1.  Read them from file supplied by HalfPipe.
Add run id & status, downlink id to metadata when registering files.
Use cal file for recon EOR and trending.
Do chunk cleanup on successfule runs if runstatus is COMPLETE or INCOMPLETE.
rm -rf packages before checking them out when building.
-------------------------------------------

1.21
-----------------
GR v12r13
Monitor dp20071002_v2
ft2Util v1r1p20

Get GCR calib crumb files.
Run alarmHandler on fastMon output, log results to ISOC logger.
Clean up compound comands run by scripts.
-------------------------------------------

1.22
-----------------
GR v12r15
Monitor dp20071004_v1

Log undefined alarms as errors.
Use OktoberTest joboptions for recon.
Merge gcr with pipelinedatasets.
Clean up merging code.
Use custom eventclassifier for FT1, run makeFT1.exe directly rather than 
bin/makeFT1.
-------------------------------------------