@@ -24,8 +24,8 @@ else:
     workDir = files['dirs']['run']
     pass
 
-#app = config.apps['makeFT1']
-app = os.path.join('$FITSGENROOT', config.cmtConfig, 'makeFT1.exe')
+app = config.apps['makeFT1']
+#app = os.path.join('$FITSGENROOT', config.cmtConfig, 'makeFT1.exe')
 
 stagedMeritFile = staged.stageIn(files['run']['merit'])
 realFt1File = files['run']['ft1']
@@ -35,13 +35,13 @@ tStart = float(os.environ['tStart'])
 tStop = float(os.environ['tStop'])
 
 stSetup = config.stSetup
-PFILES = config.PFILES
+makeFT1Setup = os.path.join('$FITSGENROOT', 'cmt', 'setup.sh')
 
 cmd = '''
 cd %(workDir)s
-source %(stSetup)s
-export PFILES=%(PFILES)s
-%(app)s rootFile=%(stagedMeritFile)s fitsFile=%(stagedFt1File)s TCuts=DEFAULT event_classifier="OktoberTest_Classifier" tstart=%(tStart).17g tstop=%(tStop).17g
+#source %(stSetup)s
+#source %(makeFT1Setup)s
+%(app)s rootFile=%(stagedMeritFile)s fitsFile=%(stagedFt1File)s TCuts=DEFAULT event_classifier="Pass5_Classifier" tstart=%(tStart).17g tstop=%(tStop).17g
 ''' % locals()
 
 status = runner.run(cmd)
@@ -49,9 +49,11 @@ if status: finishOption = 'wipe'
 
 status |= staged.finish(finishOption)
 
-if os.path.exists(files['run']['ft1Export']):
-    os.remove(files['run']['ft1Export'])
-os.symlink(os.path.basename(realFt1File), files['run']['ft1Export'])
+ft1Export = files['run']['ft1Export']
+if os.path.lexists(ft1Export):
+    os.remove(ft1Export)
+    pass
+os.symlink(os.path.basename(realFt1File), ft1Export)
 
 fileType = 'FT1'
 registerPrep.prep(fileType, realFt1File)
