@@ -49,9 +49,10 @@ if status: finishOption = 'wipe'
 
 status |= staged.finish(finishOption)
 
-if os.path.exists(files['run']['ft2Export']):
-    os.remove(files['run']['ft2Export'])
-os.symlink(os.path.basename(fitsFt2File), files['run']['ft2Export'])
+ft2Export = files['run']['ft2Export']
+if os.path.lexists(ft2Export):
+    os.remove(ft2Export)
+os.symlink(os.path.basename(fitsFt2File), ft2Export)
 
 fileType = 'FT2'
 registerPrep.prep(fileType, fitsFt2File)
